sqlxo/tests/orm/derive/try/err/unnamed_fields.stderr
error: `Query` requires named fields
 --> tests/orm/derive/try/err/unnamed_fields.rs:5:13
  |
5 | pub struct T(String, i32);
  |             ^^^^^^^^^^^^^
